src/test/ui/error-codes/E0453.stderr
error[E0453]: allow(non_snake_case) overruled by outer forbid(non_snake_case)
  --> $DIR/E0453.rs:13:9
   |
LL | #![forbid(non_snake_case)]
   |           -------------- `forbid` level set here
LL | 
LL | #[allow(non_snake_case)]
   |         ^^^^^^^^^^^^^^ overruled by previous forbid

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0453"
